Bug 440200 - Alarm with reminder configured failed to trigger
Summary: Alarm with reminder configured failed to trigger
Status: RESOLVED FIXED
Alias: None
Product: kalarm
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.2.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Jarvie
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-23 15:27 UTC by witchhunter
Modified: 2021-07-27 18:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08.0
Sentry Crash Report:


Attachments
configuration (66.78 KB, image/png)
2021-07-23 15:27 UTC, witchhunter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description witchhunter 2021-07-23 15:27:51 UTC
Created attachment 140283 [details]
configuration

SUMMARY
This is one case when alarm will failed to trigger silently.

STEPS TO REPRODUCE
1. Click on "New display alarm"
2. Set: Alarm > Time > at date/time
3. Set "Reminder" checked with "afterwards" option

OBSERVED RESULT
Alarm will be accepted, although it won't trigger, nor it will be visible in system tray.

EXPECTED RESULT
Alarm will trigger. It will be visible on system tray. It will show reminder.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux (and Kubuntu 21.04)
KDE Plasma Version: 5.22.3
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Good luck waking for work!
Comment 1 David Jarvie 2021-07-27 15:25:35 UTC
Git commit 1942c057d18c4480f7861b98d930f76499f03819 by David Jarvie.
Committed on 27/07/2021 at 15:21.
Pushed by djarvie into branch 'release/21.08'.

Fix events with reminder alarms not triggering

M  +1    -1    src/kaevent.cpp

https://invent.kde.org/pim/kalarmcal/commit/1942c057d18c4480f7861b98d930f76499f03819
Comment 2 David Jarvie 2021-07-27 18:05:23 UTC
Git commit 71ea41a44b4519eb59c72eca00d83ba56b2c3ede by David Jarvie.
Committed on 27/07/2021 at 18:01.
Pushed by djarvie into branch 'release/21.08'.

Fix deletion of events with reminders after the main event

Ensure that events with reminders after the main event are deleted
after the reminder is displayed.

M  +11   -5    src/kaevent.cpp

https://invent.kde.org/pim/kalarmcal/commit/71ea41a44b4519eb59c72eca00d83ba56b2c3ede
Comment 3 David Jarvie 2021-07-27 18:10:21 UTC
This is now fixed by commits in kalarmcal library (listed above). The fixed version of kalarmcal will be released in KDE apps version 21.08.

Thanks for reporting this bug.