Fix events with reminder alarms not triggering

BUG:440200